# entertainment-tracker

./: .gitignore  .sample_env  Cargo.toml  Dockerfile  README.md  Rocket.toml  TODO.md  cargo-tree  electron_main.js  elm.json  index.html  package-lock.json  package.json  postcss.config.js  tailwind.config.js
migrations/2021-03-01-140526_book/: down.sql  up.sql
migrations/2021-03-02-134348_author/: down.sql  up.sql
migrations/2021-03-02-134425_book/: down.sql  up.sql
migrations/2021-03-03-141105_reading_history/: down.sql  up.sql
src/: Main.elm  Route.elm  Types.elm  app.js  author.rs  book.rs  down.sql  elm.html  github_ouath.rs  index.html  index.js  main.rs  models.rs  reading_history.rs  schema.rs  tests.rs  up.sql
tests/: Example.elm
