[package]
name = "entertainment-tracker"
version = "0.1.0"
authors = ["farooq-azam-khan <farooq1.khan@ryerson.ca>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.6"
dotenv = "0.15.0"
reqwest = { version = "0.10", features = ["blocking", "json"] }
tokio = { version = "0.2", features = ["full"] }
rocket_cors = "0.5.1"
postgres = "0.18.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
